hw3/113-2-CompilerHW3-main/y.output
Terminals unused in grammar

    GEQ
    LEQ
    FOR
    LOOP
    RETURN
    BREAK
    ARROW
    IN
    DOTDOT
    RSHIFT


State 58 conflicts: 2 shift/reduce
State 59 conflicts: 2 shift/reduce
State 98 conflicts: 2 shift/reduce
State 99 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 101 conflicts: 2 shift/reduce
State 102 conflicts: 13 shift/reduce
State 104 conflicts: 13 shift/reduce
State 105 conflicts: 2 shift/reduce
State 106 conflicts: 2 shift/reduce
State 107 conflicts: 2 shift/reduce
State 108 conflicts: 2 shift/reduce
State 109 conflicts: 2 shift/reduce
State 110 conflicts: 2 shift/reduce
State 111 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: GlobalStatementList

    2 GlobalStatementList: GlobalStatementList GlobalStatement
    3                    | GlobalStatement

    4 GlobalStatement: FunctionDeclStmt
    5                | NEWLINE

    6 $@1: ε

    7 FunctionDeclStmt: FUNC ID '(' ')' $@1 BlockStmt

    8 $@2: ε

    9 BlockStmt: '{' $@2 StatementList '}'

   10 StatementList: StatementList Statement
   11              | Statement

   12 Statement: VarDeclStmt
   13          | AssignmentStmt
   14          | PrintStmt
   15          | IfStmt
   16          | WhileStmt
   17          | BlockStmt
   18          | NEWLINE

   19 VarDeclStmt: LET MUT ID '=' Expression ';'
   20            | LET MUT ID ':' Type ';'
   21            | LET MUT ID ':' Type '=' Expression ';'
   22            | LET ID ':' Type '=' Expression ';'
   23            | LET ID ':' Type ';'
   24            | LET ID ':' Type '=' '"' Expression '"' ';'
   25            | LET ID ':' Type '=' '[' ExpressionList ']' ';'

   26 IfStmt: IF Expression BlockStmt

   27 $@3: ε

   28 $@4: ε

   29 IfStmt: IF Expression BlockStmt $@3 ELSE $@4 BlockStmt

   30 $@5: ε

   31 WhileStmt: WHILE $@5 Expression BlockStmt

   32 AssignmentStmt: ID '=' Expression ';'
   33               | ID '=' '"' Expression '"' ';'
   34               | ID ADD_ASSIGN Expression ';'
   35               | ID SUB_ASSIGN Expression ';'
   36               | ID MUL_ASSIGN Expression ';'
   37               | ID DIV_ASSIGN Expression ';'
   38               | ID REM_ASSIGN Expression ';'

   39 PrintStmt: PRINTLN '(' Expression ')' ';'
   40          | PRINT '(' Expression ')' ';'
   41          | PRINTLN '(' '"' STRING_LIT '"' ')' ';'

   42 ExpressionList: Expression
   43               | ExpressionList ',' Expression

   44 Expression: INT_LIT
   45           | FLOAT_LIT
   46           | TRUE
   47           | FALSE
   48           | ID
   49           | ID '[' INT_LIT ']'
   50           | '-' Expression
   51           | '!' Expression
   52           | Expression AS Expression
   53           | Expression '+' Expression
   54           | Expression '-' Expression
   55           | Expression '*' Expression
   56           | Expression '/' Expression
   57           | Expression '%' Expression
   58           | Expression '>' Expression
   59           | Expression '<' Expression
   60           | Expression LSHIFT Expression
   61           | Expression EQL Expression
   62           | Expression NEQ Expression
   63           | Expression LAND Expression
   64           | Expression LOR Expression
   65           | '(' Expression ')'
   66           | STRING_LIT
   67           | '"' '"'
   68           | Expression AS Type

   69 Type: INT
   70     | FLOAT
   71     | BOOL
   72     | STR
   73     | '&' STR
   74     | '[' INT ';' Expression ']'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 51
    '"' (34) 24 33 41 67
    '%' (37) 57
    '&' (38) 73
    '(' (40) 7 39 40 41 65
    ')' (41) 7 39 40 41 65
    '*' (42) 55
    '+' (43) 53
    ',' (44) 43
    '-' (45) 50 54
    '/' (47) 56
    ':' (58) 20 21 22 23 24 25
    ';' (59) 19 20 21 22 23 24 25 32 33 34 35 36 37 38 39 40 41 74
    '<' (60) 59
    '=' (61) 19 21 22 24 25 32 33
    '>' (62) 58
    '[' (91) 25 49 74
    ']' (93) 25 49 74
    '{' (123) 9
    '}' (125) 9
    error (256)
    LET (258) 19 20 21 22 23 24 25
    MUT (259) 19 20 21
    NEWLINE (260) 5 18
    INT (261) 69 74
    FLOAT (262) 70
    BOOL (263) 71
    STR (264) 72 73
    TRUE (265) 46
    FALSE (266) 47
    GEQ (267)
    LEQ (268)
    EQL (269) 61
    NEQ (270) 62
    LOR (271) 64
    LAND (272) 63
    ADD_ASSIGN (273) 34
    SUB_ASSIGN (274) 35
    MUL_ASSIGN (275) 36
    DIV_ASSIGN (276) 37
    REM_ASSIGN (277) 38
    IF (278) 26 29
    ELSE (279) 29
    FOR (280)
    WHILE (281) 31
    LOOP (282)
    PRINT (283) 40
    PRINTLN (284) 39 41
    FUNC (285) 7
    RETURN (286)
    BREAK (287)
    ARROW (288)
    AS (289) 52 68
    IN (290)
    DOTDOT (291)
    RSHIFT (292)
    LSHIFT (293) 60
    INT_LIT <i_val> (294) 44 49
    FLOAT_LIT <f_val> (295) 45
    STRING_LIT <s_val> (296) 41 66
    ID <s_val> (297) 7 19 20 21 22 23 24 25 32 33 34 35 36 37 38 48 49
    UMINUS (298)


Nonterminals, with rules where they appear

    $accept (64)
        on left: 0
    Program (65)
        on left: 1
        on right: 0
    GlobalStatementList (66)
        on left: 2 3
        on right: 1 2
    GlobalStatement (67)
        on left: 4 5
        on right: 2 3
    FunctionDeclStmt (68)
        on left: 7
        on right: 4
    $@1 (69)
        on left: 6
        on right: 7
    BlockStmt (70)
        on left: 9
        on right: 7 17 26 29 31
    $@2 (71)
        on left: 8
        on right: 9
    StatementList (72)
        on left: 10 11
        on right: 9 10
    Statement (73)
        on left: 12 13 14 15 16 17 18
        on right: 10 11
    VarDeclStmt (74)
        on left: 19 20 21 22 23 24 25
        on right: 12
    IfStmt (75)
        on left: 26 29
        on right: 15
    $@3 (76)
        on left: 27
        on right: 29
    $@4 (77)
        on left: 28
        on right: 29
    WhileStmt (78)
        on left: 31
        on right: 16
    $@5 (79)
        on left: 30
        on right: 31
    AssignmentStmt (80)
        on left: 32 33 34 35 36 37 38
        on right: 13
    PrintStmt (81)
        on left: 39 40 41
        on right: 14
    ExpressionList (82)
        on left: 42 43
        on right: 25 43
    Expression <s_val> (83)
        on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
        on right: 19 21 22 24 26 29 31 32 33 34 35 36 37 38 39 40 42 43 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 68 74
    Type <s_val> (84)
        on left: 69 70 71 72 73 74
        on right: 20 21 22 23 24 25 68


State 0

    0 $accept: • Program $end

    NEWLINE  shift, and go to state 1
    FUNC     shift, and go to state 2

    Program              go to state 3
    GlobalStatementList  go to state 4
    GlobalStatement      go to state 5
    FunctionDeclStmt     go to state 6


State 1

    5 GlobalStatement: NEWLINE •

    $default  reduce using rule 5 (GlobalStatement)


State 2

    7 FunctionDeclStmt: FUNC • ID '(' ')' $@1 BlockStmt

    ID  shift, and go to state 7


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 8


State 4

    1 Program: GlobalStatementList •
    2 GlobalStatementList: GlobalStatementList • GlobalStatement

    NEWLINE  shift, and go to state 1
    FUNC     shift, and go to state 2

    $default  reduce using rule 1 (Program)

    GlobalStatement   go to state 9
    FunctionDeclStmt  go to state 6


State 5

    3 GlobalStatementList: GlobalStatement •

    $default  reduce using rule 3 (GlobalStatementList)


State 6

    4 GlobalStatement: FunctionDeclStmt •

    $default  reduce using rule 4 (GlobalStatement)


State 7

    7 FunctionDeclStmt: FUNC ID • '(' ')' $@1 BlockStmt

    '('  shift, and go to state 10


State 8

    0 $accept: Program $end •

    $default  accept


State 9

    2 GlobalStatementList: GlobalStatementList GlobalStatement •

    $default  reduce using rule 2 (GlobalStatementList)


State 10

    7 FunctionDeclStmt: FUNC ID '(' • ')' $@1 BlockStmt

    ')'  shift, and go to state 11


State 11

    7 FunctionDeclStmt: FUNC ID '(' ')' • $@1 BlockStmt

    $default  reduce using rule 6 ($@1)

    $@1  go to state 12


State 12

    7 FunctionDeclStmt: FUNC ID '(' ')' $@1 • BlockStmt

    '{'  shift, and go to state 13

    BlockStmt  go to state 14


State 13

    9 BlockStmt: '{' • $@2 StatementList '}'

    $default  reduce using rule 8 ($@2)

    $@2  go to state 15


State 14

    7 FunctionDeclStmt: FUNC ID '(' ')' $@1 BlockStmt •

    $default  reduce using rule 7 (FunctionDeclStmt)


State 15

    9 BlockStmt: '{' $@2 • StatementList '}'

    LET      shift, and go to state 16
    NEWLINE  shift, and go to state 17
    IF       shift, and go to state 18
    WHILE    shift, and go to state 19
    PRINT    shift, and go to state 20
    PRINTLN  shift, and go to state 21
    ID       shift, and go to state 22
    '{'      shift, and go to state 13

    BlockStmt       go to state 23
    StatementList   go to state 24
    Statement       go to state 25
    VarDeclStmt     go to state 26
    IfStmt          go to state 27
    WhileStmt       go to state 28
    AssignmentStmt  go to state 29
    PrintStmt       go to state 30


State 16

   19 VarDeclStmt: LET • MUT ID '=' Expression ';'
   20            | LET • MUT ID ':' Type ';'
   21            | LET • MUT ID ':' Type '=' Expression ';'
   22            | LET • ID ':' Type '=' Expression ';'
   23            | LET • ID ':' Type ';'
   24            | LET • ID ':' Type '=' '"' Expression '"' ';'
   25            | LET • ID ':' Type '=' '[' ExpressionList ']' ';'

    MUT  shift, and go to state 31
    ID   shift, and go to state 32


State 17

   18 Statement: NEWLINE •

    $default  reduce using rule 18 (Statement)


State 18

   26 IfStmt: IF • Expression BlockStmt
   29       | IF • Expression BlockStmt $@3 ELSE $@4 BlockStmt

    TRUE        shift, and go to state 33
    FALSE       shift, and go to state 34
    INT_LIT     shift, and go to state 35
    FLOAT_LIT   shift, and go to state 36
    STRING_LIT  shift, and go to state 37
    ID          shift, and go to state 38
    '!'         shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41
    '"'         shift, and go to state 42

    Expression  go to state 43


State 19

   31 WhileStmt: WHILE • $@5 Expression BlockStmt

    $default  reduce using rule 30 ($@5)

    $@5  go to state 44


State 20

   40 PrintStmt: PRINT • '(' Expression ')' ';'

    '('  shift, and go to state 45


State 21

   39 PrintStmt: PRINTLN • '(' Expression ')' ';'
   41          | PRINTLN • '(' '"' STRING_LIT '"' ')' ';'

    '('  shift, and go to state 46


State 22

   32 AssignmentStmt: ID • '=' Expression ';'
   33               | ID • '=' '"' Expression '"' ';'
   34               | ID • ADD_ASSIGN Expression ';'
   35               | ID • SUB_ASSIGN Expression ';'
   36               | ID • MUL_ASSIGN Expression ';'
   37               | ID • DIV_ASSIGN Expression ';'
   38               | ID • REM_ASSIGN Expression ';'

    ADD_ASSIGN  shift, and go to state 47
    SUB_ASSIGN  shift, and go to state 48
    MUL_ASSIGN  shift, and go to state 49
    DIV_ASSIGN  shift, and go to state 50
    REM_ASSIGN  shift, and go to state 51
    '='         shift, and go to state 52


State 23

   17 Statement: BlockStmt •

    $default  reduce using rule 17 (Statement)


State 24

    9 BlockStmt: '{' $@2 StatementList • '}'
   10 StatementList: StatementList • Statement

    LET      shift, and go to state 16
    NEWLINE  shift, and go to state 17
    IF       shift, and go to state 18
    WHILE    shift, and go to state 19
    PRINT    shift, and go to state 20
    PRINTLN  shift, and go to state 21
    ID       shift, and go to state 22
    '{'      shift, and go to state 13
    '}'      shift, and go to state 53

    BlockStmt       go to state 23
    Statement       go to state 54
    VarDeclStmt     go to state 26
    IfStmt          go to state 27
    WhileStmt       go to state 28
    AssignmentStmt  go to state 29
    PrintStmt       go to state 30


State 25

   11 StatementList: Statement •

    $default  reduce using rule 11 (StatementList)


State 26

   12 Statement: VarDeclStmt •

    $default  reduce using rule 12 (Statement)


State 27

   15 Statement: IfStmt •

    $default  reduce using rule 15 (Statement)


State 28

   16 Statement: WhileStmt •

    $default  reduce using rule 16 (Statement)


State 29

   13 Statement: AssignmentStmt •

    $default  reduce using rule 13 (Statement)


State 30

   14 Statement: PrintStmt •

    $default  reduce using rule 14 (Statement)


State 31

   19 VarDeclStmt: LET MUT • ID '=' Expression ';'
   20            | LET MUT • ID ':' Type ';'
   21            | LET MUT • ID ':' Type '=' Expression ';'

    ID  shift, and go to state 55


State 32

   22 VarDeclStmt: LET ID • ':' Type '=' Expression ';'
   23            | LET ID • ':' Type ';'
   24            | LET ID • ':' Type '=' '"' Expression '"' ';'
   25            | LET ID • ':' Type '=' '[' ExpressionList ']' ';'

    ':'  shift, and go to state 56


State 33

   46 Expression: TRUE •

    $default  reduce using rule 46 (Expression)


State 34

   47 Expression: FALSE •

    $default  reduce using rule 47 (Expression)


State 35

   44 Expression: INT_LIT •

    $default  reduce using rule 44 (Expression)


State 36

   45 Expression: FLOAT_LIT •

    $default  reduce using rule 45 (Expression)


State 37

   66 Expression: STRING_LIT •

    $default  reduce using rule 66 (Expression)


State 38

   48 Expression: ID •
   49           | ID • '[' INT_LIT ']'

    '['  shift, and go to state 57

    $default  reduce using rule 48 (Expression)


State 39

   51 Expression: '!' • Expression

    TRUE        shift, and go to state 33
    FALSE       shift, and go to state 34
    INT_LIT     shift, and go to state 35
    FLOAT_LIT   shift, and go to state 36
    STRING_LIT  shift, and go to state 37
    ID          shift, and go to state 38
    '!'         shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41
    '"'         shift, and go to state 42

    Expression  go to state 58


State 40

   50 Expression: '-' • Expression

    TRUE        shift, and go to state 33
    FALSE       shift, and go to state 34
    INT_LIT     shift, and go to state 35
    FLOAT_LIT   shift, and go to state 36
    STRING_LIT  shift, and go to state 37
    ID          shift, and go to state 38
    '!'         shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41
    '"'         shift, and go to state 42

    Expression  go to state 59


State 41

   65 Expression: '(' • Expression ')'

    TRUE        shift, and go to state 33
    FALSE       shift, and go to state 34
    INT_LIT     shift, and go to state 35
    FLOAT_LIT   shift, and go to state 36
    STRING_LIT  shift, and go to state 37
    ID          shift, and go to state 38
    '!'         shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41
    '"'         shift, and go to state 42

    Expression  go to state 60


State 42

   67 Expression: '"' • '"'

    '"'  shift, and go to state 61


State 43

   26 IfStmt: IF Expression • BlockStmt
   29       | IF Expression • BlockStmt $@3 ELSE $@4 BlockStmt
   52 Expression: Expression • AS Expression
   53           | Expression • '+' Expression
   54           | Expression • '-' Expression
   55           | Expression • '*' Expression
   56           | Expression • '/' Expression
   57           | Expression • '%' Expression
   58           | Expression • '>' Expression
   59           | Expression • '<' Expression
   60           | Expression • LSHIFT Expression
   61           | Expression • EQL Expression
   62           | Expression • NEQ Expression
   63           | Expression • LAND Expression
   64           | Expression • LOR Expression
   68           | Expression • AS Type

    EQL     shift, and go to state 62
    NEQ     shift, and go to state 63
    LOR     shift, and go to state 64
    LAND    shift, and go to state 65
    AS      shift, and go to state 66
    LSHIFT  shift, and go to state 67
    '>'     shift, and go to state 68
    '<'     shift, and go to state 69
    '+'     shift, and go to state 70
    '-'     shift, and go to state 71
    '*'     shift, and go to state 72
    '/'     shift, and go to state 73
    '%'     shift, and go to state 74
    '{'     shift, and go to state 13

    BlockStmt  go to state 75


State 44

   31 WhileStmt: WHILE $@5 • Expression BlockStmt

    TRUE        shift, and go to state 33
    FALSE       shift, and go to state 34
    INT_LIT     shift, and go to state 35
    FLOAT_LIT   shift, and go to state 36
    STRING_LIT  shift, and go to state 37
    ID          shift, and go to state 38
    '!'         shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41
    '"'         shift, and go to state 42

    Expression  go to state 76


State 45

   40 PrintStmt: PRINT '(' • Expression ')' ';'

    TRUE        shift, and go to state 33
    FALSE       shift, and go to state 34
    INT_LIT     shift, and go to state 35
    FLOAT_LIT   shift, and go to state 36
    STRING_LIT  shift, and go to state 37
    ID          shift, and go to state 38
    '!'         shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41
    '"'         shift, and go to state 42

    Expression  go to state 77


State 46

   39 PrintStmt: PRINTLN '(' • Expression ')' ';'
   41          | PRINTLN '(' • '"' STRING_LIT '"' ')' ';'

    TRUE        shift, and go to state 33
    FALSE       shift, and go to state 34
    INT_LIT     shift, and go to state 35
    FLOAT_LIT   shift, and go to state 36
    STRING_LIT  shift, and go to state 37
    ID          shift, and go to state 38
    '!'         shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41
    '"'         shift, and go to state 78

    Expression  go to state 79


State 47

   34 AssignmentStmt: ID ADD_ASSIGN • Expression ';'

    TRUE        shift, and go to state 33
    FALSE       shift, and go to state 34
    INT_LIT     shift, and go to state 35
    FLOAT_LIT   shift, and go to state 36
    STRING_LIT  shift, and go to state 37
    ID          shift, and go to state 38
    '!'         shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41
    '"'         shift, and go to state 42

    Expression  go to state 80


State 48

   35 AssignmentStmt: ID SUB_ASSIGN • Expression ';'

    TRUE        shift, and go to state 33
    FALSE       shift, and go to state 34
    INT_LIT     shift, and go to state 35
    FLOAT_LIT   shift, and go to state 36
    STRING_LIT  shift, and go to state 37
    ID          shift, and go to state 38
    '!'         shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41
    '"'         shift, and go to state 42

    Expression  go to state 81


State 49

   36 AssignmentStmt: ID MUL_ASSIGN • Expression ';'

    TRUE        shift, and go to state 33
    FALSE       shift, and go to state 34
    INT_LIT     shift, and go to state 35
    FLOAT_LIT   shift, and go to state 36
    STRING_LIT  shift, and go to state 37
    ID          shift, and go to state 38
    '!'         shift, and go to state 39
    '-'         shift, and go to state 40
    '('         shift, and go to state 41
    '"'         shift, and go to state 42

    Expression  go to state 82


State 50
